<resources>

    <!--    список скорее всего не нужных строк, они не задействованы нигде-->
    <!--    <string name="app_name" translatable="false">WearMe</string>-->
    <string name="appSlogan" translatable="false">Dress to Impress, Effortlessly</string>
    <string name="hintUserName">Full Name</string>
    <string name="signUp">Sign Up</string>
    <string name="errorEmptyName">Please enter your name</string>
    <string name="errorShortName">Name must be at least 3 characters</string>
    <string name="retry">Retry</string>
    <string name="measurementsHintHeight">Height</string>
    <string name="reviewsCount">Reviews count:</string>

    <!--    activity_bio  -->
    <string name="appName" translatable="false">WearMe</string>
    <string name="bioTitle">Create Profile</string>
    <string name="bioNameHint">Name</string>
    <string name="bioMale">M</string>
    <string name="bioFemale">F</string>
    <string name="bioHintAge">Age</string>
    <string name="bioButtonText">Confirm</string>

    <!--    activity_cloth_details  -->
    <string name="clothImage" translatable="false">Cloth Image</string>
    <!--    хз насколько нужна строка выше-->
    <string name="starIcon">Rating icon</string>
    <string name="measurementsTitle">Cloth Measurements (cm)</string>

    <!--    activity_login  -->
    <string name="headerSignInPage">Sign In</string>
    <string name="hintUserEmail" translatable="false">Email</string>
    <string name="hintUserPassword">Password</string>
    <string name="hintUserPasswordRepeat">Password Repeat</string>
    <string name="iconEmailDescription">Email icon</string>
    <string name="iconPasswordDescription">Password icon</string>
    <string name="iconPasswordVisibility">Switch password visibility</string>
    <string name="linkToSignUpPageDescription">You do not have an account?</string>
    <string name="headerSignUpPage">Sign Up</string>
    <string name="buttonSignInPage">Sign In</string>
    <string name="buttonSignUpPage">Sign Up</string>

    <!--    activity_main  -->
    <string name="mainProfile">Profile</string>
    <string name="mainCatalog">Catalog</string>
    <string name="mainCategory">Categories catalog</string>

    <!--    activity_measurments  -->
    <string name="measurementsHeader">Enter your measurements</string>
    <string name="measurementsUpper">Upper</string>
    <string name="measurementsLower">Lower</string>
    <string name="measurementsFoot">Foot</string>
    <string name="measurementsHintChest">Chest</string>
    <string name="measurementsHintWaist">Waist</string>
    <string name="measurementsHintHips">Hips</string>
    <string name="measurementsHintFeet">Foot</string>
    <string name="measurementsButtonText">Enter</string>
    <string name="instructionChest">Measure your chest circumference around the widest part</string>
    <string name="instructionWaist">Measure your waist at the navel level without tightening the ribbon</string>
    <string name="instructionHips">Measure the hips by the most prominent points of the buttocks</string>
    <string name="instructionFoot">Measure the length of the foot from the heel to the tip of the toe</string>
    <string name="measurementsOk" translatable="false">OK</string>

    <!--    activity_profile  -->
    <string name="profileEdit">Edit Profile</string>
    <string name="profileEditMeasuresents">Edit Measurements</string>
    <string name="profileLogOut">Log Out</string>

    <!--    activity_profile_edit  -->
    <string name="profileEditName">Name</string>
    <string name="profileEditAge">Age</string>
    <string name="profileEditNameHint">Name</string>
    <string name="profileEditAgeHint">Age</string>
    <string name="profileEditMessage">Enter your profile data</string>

    <!--    activity_registration  -->
    <string name="linkToSignInPageDescription">You have an account?</string>

    <!--    item_category  -->
    <string name="category" translatable="false">Category</string>

    <!--    item_product -->
    <string name="productName" translatable="false">Clothes name</string>
    <string name="itemProductRating" translatable="false">4.5</string>
    <string name="productReviews" translatable="false">(100 reviews)</string>
    <string name="productInfo" translatable="false">Info</string>
    <string name="productBuy" translatable="false">Buy</string>

    <!--    errors  -->
    <string name="errorMatchPassword">Passwords do not matching</string>
    <string name="errorEmptyEmail">Please enter email</string>
    <string name="errorInvalidEmail">Invalid email format</string>
    <string name="errorEmptyPassword">Please enter password</string>
    <string name="errorShortPassword">Password must be at least 8 characters</string>
    <string name="errorNoUppercase">Password must contain at least one uppercase letter</string>
    <string name="registrationFailed">Registration failed. Please try again</string>
    <string name="filter_category">Category</string>
    <string name="filter_color">Color</string>
    <string name="apply_filters">Apply</string>
    <string name="filter_title">Filters</string>
    <string name="open_filters">Filters</string>

    <string name="upper">Outerwear</string>
    <string name="lower">Filters</string>
    <string name="footwear">Footwear</string>

    <!--    measurementsEditActivity errors-->
    <string name="error_field_empty">Field %s cannot be empty</string>
    <string name="error_integer_required">Value must be an integer</string>
    <string name="error_range">Allowed range: %1$d-%2$d</string>
    <string name="error_number_required">Value must be a number</string>
    <string name="error_range_double">Allowed range: %1$.1f-%2$.1f</string>
    <string name="chest">chest</string>
    <string name="waist">waist</string>
    <string name="hips">hips</string>
    <string name="foot">foot</string>

    <!--    bioActivity errors-->
    <string name="error_enter_name">Enter name</string>
    <string name="error_invalid_name">Only letters allowed</string>
    <string name="error_enter_age">Enter age</string>
    <string name="error_invalid_age">Numbers only</string>
    <string name="error_age_range">Must be 1–149</string>
    <string name="error_select_gender">Select gender</string>

    <!--    profileEditActivity-->
    <string name="error_enter_new_name">Enter a new name</string>
    <string name="error_age_must_be_number">Age must be a number</string>
    <string name="error_permissible_age">Permissible age: 1-149</string>

    <string-array name="categories">
        <item>All</item>
        <item>Upper</item>
        <item>Lower</item>
    </string-array>

</resources>