<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    android:padding="16dp">

    <Button
        android:id="@+id/btnCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_color"
        android:layout_marginTop="8dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/applyFiltersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_filters"
        android:layout_marginTop="16dp"
        android:textColor="@color/black" />

</LinearLayout>